--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
   <title>Pedro Fonseca</title>
 </head>
 <body>
-  
+  <div class="card-about-main">
+    <img src="./images/meteoro.png" alt="meteoro" id="meteoro">
+    <span>Olá o meu nome é Pedro Fonseca e desde pequeno era curioso e sempre
+      queria entender como as coisas funcionavam, por muito tempo fui fascinado
+      por biologia e tentava entender como os animais se comportavam e se 
+      comunicavam com o mundo ao seu redor.
+      <br><br>
+      Em 2020 comecei e estudar Automação Industrial e a entender como as coisas
+      são feitas em nivel de hardware, foi algo incrivel e consegui explorar
+      bastante as minhas ideias nesse curso desenvolvendo dispositivos que
+      comunicavam entre si e interagiam com o mundo real.
+    </span>
+  </div>
 </body>
 </html>
