--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
   <title>Pedro Fonseca</title>
 </head>
 <body>
-  <div class="card-about-main" data-tilt>
-    <img src="./images/meteoro.png" alt="meteoro" id="meteoro">
+
+  <div class="espaco-container">
+    <div id="foguete">
+      <img src="./images/foguete.png" alt="Foguete" >
+    </div>
+  </div>
+
+  <div class="card-sobre-principal">
+    <img src="./images/meteoro.png" alt="meteoro" id="meteoro" >
     <span>Olá o meu nome é <b>Pedro Fonseca</b> e desde pequeno era curioso e sempre
       queria entender como as coisas funcionavam, por muito tempo fui fascinado
       por biologia e tentava entender como os animais se comportavam e se 
