--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="card-sobre-principal">
+  <div class="card-sobre-principal" data-tilt data-tilt-max="5" data-tilt-speed="500">
     <img src="./images/meteoro.png" alt="meteoro" id="meteoro" >
     <span>Olá o meu nome é <b>Pedro Fonseca</b> e desde pequeno era curioso e sempre
       queria entender como as coisas funcionavam, por muito tempo fui fascinado
