--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="card-sobre-principal" data-tilt data-tilt-max="5" data-tilt-speed="500">
+  <div class="card-sobre-principal">
     <img src="./images/meteoro.png" alt="meteoro" id="meteoro" >
     <span>Olá o meu nome é <b>Pedro Fonseca</b> e desde pequeno era curioso e sempre
       queria entender como as coisas funcionavam, por muito tempo fui fascinado
@@ -29,6 +29,69 @@
     </span>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js" integrity="sha512-K9tDZvc8nQXR1DMuT97sct9f40dilGp97vx7EXjswJA+/mKqJZ8vcZLifZDP+9t08osMLuiIjd4jZ0SM011Q+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <div id="title-linguagens">Linguagens</div>
+  <div class="card-container">
+
+    <div class="card">
+      <div class="img-container">
+        <img src="./images/js.png" alt="Javascript">
+      </div>
+      <span>
+        asdasdas dasdas aaaaaaa aaaaaaaaa aaaaaaa aaaaa
+        aaaaaaaa aaaaaa aaaaaaa aaaaaaaaa aaaaaa aaaaaa
+        aaaaaaaa aaaaaa aaaaaaa aaaaaaaaaa aaaaa aaaaaa
+        aaaaaaaa aaaaaa aaaaaaa aaaaaaaaaa aaaaa aaaaaa
+      </span>
+    </div>
+
+    <div class="card">
+      <div class="img-container">
+        <img src="./images/py.png" alt="Python">
+      </div>
+      <span>
+        asdasdas dasdasaaaaaaa aaaaaaaaa aaaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+      </span>
+    </div>
+
+    <div class="card">
+      <div class="img-container">
+        <img src="./images/c++.png" alt="c++">
+      </div>
+      <span>
+        asdasdas dasdasaaaaaaa aaaaaaaaa aaaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+      </span>
+    </div>
+
+    <div class="card">
+      <div class="img-container">
+        <img src="./images/java.png" alt="Java">
+      </div>
+      <span>
+        asdasdas dasdasaaaaaaa aaaaaaaaa aaaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+      </span>
+    </div>
+
+    <div class="card">
+      <div class="img-container">
+        <img src="./images/mysql.png" alt="Mysql">
+      </div>
+      <span>
+        asdasdas dasdasaaaaaaa aaaaaaaaa aaaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+      </span>
+    </div>
+  </div>
+
 </body>
 </html>
