Alterando conteudo para lorem ipsum

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
         <img src="./images/js.png" alt="Javascript">
       </div>
       <span>
-        asdasdas dasdas aaaaaaa aaaaaaaaa aaaaaaa aaaaa
-        aaaaaaaa aaaaaa aaaaaaa aaaaaaaaa aaaaaa aaaaaa
-        aaaaaaaa aaaaaa aaaaaaa aaaaaaaaaa aaaaa aaaaaa
-        aaaaaaaa aaaaaa aaaaaaa aaaaaaaaaa aaaaa aaaaaa
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+        reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+        error animi commodi saepe laboriosam sapiente dignissimos iure.
       </span>
     </div>
 
@@ -49,10 +48,9 @@
         <img src="./images/py.png" alt="Python">
       </div>
       <span>
-        asdasdas dasdasaaaaaaa aaaaaaaaa aaaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+        reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+        error animi commodi saepe laboriosam sapiente dignissimos iure.
       </span>
     </div>
 
@@ -61,10 +59,9 @@
         <img src="./images/c++.png" alt="c++">
       </div>
       <span>
-        asdasdas dasdasaaaaaaa aaaaaaaaa aaaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+        reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+        error animi commodi saepe laboriosam sapiente dignissimos iure.
       </span>
     </div>
 
@@ -73,10 +70,9 @@
         <img src="./images/java.png" alt="Java">
       </div>
       <span>
-        asdasdas dasdasaaaaaaa aaaaaaaaa aaaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+        reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+        error animi commodi saepe laboriosam sapiente dignissimos iure.
       </span>
     </div>
 
@@ -85,10 +81,9 @@
         <img src="./images/mysql.png" alt="Mysql">
       </div>
       <span>
-        asdasdas dasdasaaaaaaa aaaaaaaaa aaaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
-        aaaaaaaa aaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaaaa
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+        reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+        error animi commodi saepe laboriosam sapiente dignissimos iure.
       </span>
     </div>
   </div>
