ci: Add cards projetos template

--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="styles/carousel.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
-  rel="stylesheet" 
-  integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" 
-  crossorigin="anonymous">
   <title>Pedro Fonseca</title>
 </head>
 <body>
@@ -34,30 +30,7 @@
     </span>
   </div>
 
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/630d547cd91f3_page-0001.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/630d54926ac35_page-0001.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/630df4a44689a_page-0001.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-
-
-  <div id="title-linguagens">Linguagens</div>
+  <div id="title">Linguagens</div>
   <div class="card-container">
 
     <div class="card">
@@ -114,6 +87,68 @@
         error animi commodi saepe laboriosam sapiente dignissimos iure.
       </span>
     </div>
+  </div>
+
+  <div class="projetos-container">
+    <div id="title">Projetos</div>
+
+    <div class="card-container">
+      <div class="card">
+        <div class="img-container">
+          <img src="./images/py.png" alt="Python">
+        </div>
+        <span>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+          reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+          error animi commodi saepe laboriosam sapiente dignissimos iure.
+        </span>
+      </div>
+
+      <div class="card">
+        <div class="img-container">
+          <img src="./images/py.png" alt="Python">
+        </div>
+        <span>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+          reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+          error animi commodi saepe laboriosam sapiente dignissimos iure.
+        </span>
+      </div>
+
+      <div class="card">
+        <div class="img-container">
+          <img src="./images/py.png" alt="Python">
+        </div>
+        <span>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+          reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+          error animi commodi saepe laboriosam sapiente dignissimos iure.
+        </span>
+      </div>
+
+      <div class="card">
+        <div class="img-container">
+          <img src="./images/py.png" alt="Python">
+        </div>
+        <span>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+          reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+          error animi commodi saepe laboriosam sapiente dignissimos iure.
+        </span>
+      </div>
+
+      <div class="card">
+        <div class="img-container">
+          <img src="./images/py.png" alt="Python">
+        </div>
+        <span>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in minima facilis
+          reprehenderit reiciendis asperiores ipsum vel magnam nobis adipisci ex a,
+          error animi commodi saepe laboriosam sapiente dignissimos iure.
+        </span>
+      </div>
+    </div>
+    
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
